--- a/MvvmTestDemo/DemoViews/GroupControlsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/GroupControlsDemo.xaml
@@ -37,23 +37,23 @@
                               ContentChanged="SearchControl_ContentChanged" IsEnabled="False" StartSearch="SearchControl_StartSearch" />
         </WrapPanel>
 
-        <TextBlock Text="TagEditing:"
+        <TextBlock Text="EditingTag:"
                    FontSize="20" FontWeight="DemiBold"
                    Margin="0,8" />
         <WrapPanel>
-            <pc:TagEditing Content="写代码的厨子" Header="Chance:" Style="{StaticResource DefaultTagEditingStyle}" />
-            <pc:TagEditing Content="写代码的厨子" Header="Chance:" Margin="10,0"
+            <pc:EditingTag Content="写代码的厨子" Header="Chance:" Style="{StaticResource DefaultEditingTagStyle}" />
+            <pc:EditingTag Content="写代码的厨子" Header="Chance:" Margin="10,0"
                            pc:FrameworkElementBaseAttached.IconHeight="15" 
                            pc:FrameworkElementBaseAttached.IconMargin="0,0,3,0" 
                            pc:FrameworkElementBaseAttached.IconWidth="15"
-                           Style="{StaticResource TagEditingAddClearButtonStyle}" />
-            <pc:TagEditing Content="写代码的厨子" Header="Chance:" Margin="10,0"
+                           Style="{StaticResource EditingTagAddClearButtonStyle}" />
+            <pc:EditingTag Content="写代码的厨子" Header="Chance:" Margin="10,0"
                            EditorType="NumericUpDown" Width="400" Background="Red"
                            HorizontalContentAlignment="Left" Padding="10,0,0,0"
                            pc:FrameworkElementBaseAttached.IconHeight="15" 
                            pc:FrameworkElementBaseAttached.IconMargin="0,0,3,0" 
                            pc:FrameworkElementBaseAttached.IconWidth="15"
-                           Style="{StaticResource TagEditingAddClearButtonStyle}" />
+                           Style="{StaticResource EditingTagAddClearButtonStyle}" />
         </WrapPanel>
 
 
