--- a/CookPopularControl/Themes/GroupBoxStyle.xaml
+++ b/CookPopularControl/Themes/GroupBoxStyle.xaml
@@ -1,11 +1,80 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
+                    xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters">
 
-    <Style x:Key="DefaultGroupBoxStyle" TargetType="{x:Type GroupBox}">
-        <Setter Property="BorderBrush" Value="{DynamicResource PrimaryThemeBrush}" />
+    <!--<Style x:Key="DefaultGroupBoxStyle" TargetType="{x:Type GroupBox}">
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="BorderThickness" Value="2" />
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type GroupBox}">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Border Grid.Row="0"
+                  BorderThickness="1" BorderBrush="Pink" Background="CadetBlue"
+                  CornerRadius="2,2,0,0">
+                            <ContentPresenter Margin="4"
+                              ContentSource="Header"
+                              RecognizesAccessKey="True" />
+                        </Border>
+
+                        <Border Grid.Row="1"
+                  BorderThickness="1,0,1,1" BorderBrush="Red" Background="Green"
+                  CornerRadius="0,0,2,2">
+                            <ContentPresenter Margin="4" />
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>-->
+
+    <Style x:Key="DefaultGroupBoxStyle" TargetType="{x:Type GroupBox}">
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Padding" Value="10" />
+        <Setter Property="pc:GroupBoxAssistant.HeaderHorizontalAlignment" Value="Left" />
+        <Setter Property="pc:GroupBoxAssistant.HeaderBackground" Value="{DynamicResource PrimaryBackgroundBrush}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type GroupBox}">
+                    <Grid x:Name="RootGrid">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="4"/>
+                            <RowDefinition Height="{Binding ElementName=PART_Header,Path=ActualHeight,Converter={toolConverters:ValueTranslateConverter},ConverterParameter=0.5}"/>
+                            <RowDefinition Height="4"/>
+                            <RowDefinition Height="{Binding ElementName=PART_Header,Path=ActualHeight,Converter={toolConverters:ValueTranslateConverter},ConverterParameter=0.5}"/>
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Border Grid.Row="2" Grid.RowSpan="3" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                                Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}"/>
+                        <Border Grid.RowSpan="4" Background="{TemplateBinding pc:GroupBoxAssistant.HeaderBackground}" 
+                                HorizontalAlignment="{TemplateBinding pc:GroupBoxAssistant.HeaderHorizontalAlignment}"
+                                VerticalAlignment="Top" Margin="10,0">
+                            <ContentPresenter x:Name="PART_Header" RecognizesAccessKey="True" 
+                                              Content="{TemplateBinding Header}" Margin="6,4"
+                                              ContentTemplate="{TemplateBinding HeaderTemplate}"
+                                              ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}"
+                                              ContentStringFormat="{TemplateBinding HeaderStringFormat}"/>
+                        </Border>
+                        <ContentPresenter Grid.Row="4" Content="{TemplateBinding Content}" RecognizesAccessKey="True"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}" 
+                                          ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
+                                          ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                          Margin="{TemplateBinding Padding}"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="CustomHeaderGroupBoxStyle" TargetType="{x:Type GroupBox}" BasedOn="{StaticResource DefaultGroupBoxStyle}">
