--- a/MvvmTestDemo/DemoViews/GroupBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/GroupBoxDemo.xaml
@@ -7,15 +7,22 @@
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              mc:Ignorable="d"
              d:DesignHeight="450"
-             d:DesignWidth="800">
+             d:DesignWidth="1000" Background="#F0F0F0">
 
     <ScrollViewer>
         <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <GroupBox Header="写代码的厨子"
-                      Width="300" Height="400"
+            <GroupBox BorderBrush="Red" BorderThickness="4"
+                      Width="300" Height="400" 
+                      pc:GroupBoxAssistant.HeaderBackground="#F0F0F0"
+                      pc:GroupBoxAssistant.HeaderHorizontalAlignment="Left"
                       Foreground="{StaticResource AssistantThemeBrush}"
                       FontSize="20">
-                <Button Content="DefaultGroupBox" Width="200" Height="40" />
+                <GroupBox.Header>
+                    <Button Content="写代码的厨子" Width="200" Height="40"/>
+                </GroupBox.Header>
+                <Border Background="Green">
+                    <Button Content="DefaultGroupBox" Width="200" Height="40"/>
+                </Border>
             </GroupBox>
             <GroupBox Header="写代码的厨子"
                       Style="{DynamicResource CustomHeaderGroupBoxStyle}"
